--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,12 @@
       #6d6d6d -78.47%,
       #11101d 91.61%);
   --card-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
+  background-color: #11101d;
 }
 
 * {
   scroll-behavior: smooth;
+ 
 }
 
 .text-gradient {
