--- a/src/index.css
+++ b/src/index.css
@@ -15,12 +15,12 @@
   background-color: #11101d;
 } */
 
-* {
+/* * {
   scroll-behavior: smooth;
  
-}
+} */
 
-.text-gradient {
+/* .text-gradient {
   background: radial-gradient(64.18% 64.18% at 71.16% 35.69%,
       #def9fa 0.89%,
       #bef3f5 17.23%,
@@ -32,8 +32,8 @@
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
-}
-
+} */
+/* 
 .bg-blue-gradient {
   background: linear-gradient(157.81deg,
       #def9fa -43.27%,
@@ -131,4 +131,4 @@
 .white__gradient {
   background: rgba(255, 255, 255, 0.6);
   filter: blur(750px);
-}
+} */
