--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,14 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
+:root {
   --black-gradient: linear-gradient(144.39deg,
       #ffffff -278.56%,
       #6d6d6d -78.47%,
       #11101d 91.61%);
   --card-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
   background-color: #11101d;
-} */
+}
 
 /* * {
   scroll-behavior: smooth;
