--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
  
 } */
 
-/* .text-gradient {
+.text-gradient {
   background: radial-gradient(64.18% 64.18% at 71.16% 35.69%,
       #def9fa 0.89%,
       #bef3f5 17.23%,
@@ -32,7 +32,7 @@
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
-} */
+}
 /* 
 .bg-blue-gradient {
   background: linear-gradient(157.81deg,
