--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,10 @@
   background-color: #11101d;
 }
 
-/* * {
+* {
   scroll-behavior: smooth;
  
-} */
+}
 
 .text-gradient {
   background: radial-gradient(64.18% 64.18% at 71.16% 35.69%,
@@ -33,8 +33,8 @@
   background-clip: text;
   text-fill-color: transparent;
 }
-/* 
-.bg-blue-gradient {
+
+/* .bg-blue-gradient {
   background: linear-gradient(157.81deg,
       #def9fa -43.27%,
       #bef3f5 -21.24%,
@@ -42,42 +42,42 @@
       #7de7eb 29.82%,
       #5ce1e6 51.94%,
       #33bbcf 90.29%);
-}
+} */
 
-.bg-black-gradient {
+/* .bg-black-gradient {
   background: linear-gradient(144.39deg,
       #ffffff -278.56%,
       #6d6d6d -78.47%,
       #11101d 91.61%);
-}
+} */
 
-.bg-black-gradient-2 {
+/* .bg-black-gradient-2 {
   background: linear-gradient(-168.39deg,
       #ffffff -278.56%,
       #6d6d6d -78.47%,
       #11101d 91.61%);
-}
+} */
 
-.bg-gray-gradient {
+/* .bg-gray-gradient {
   background: linear-gradient(153.47deg,
       rgba(255, 255, 255, 0) -341.94%,
       #14101d 95.11%);
-}
+} */
 
-.bg-discount-gradient {
+/* .bg-discount-gradient {
   background: linear-gradient(125.17deg, #272727 0%, #11101d 100%);
-}
+} */
 
-.box-shadow {
+/* .box-shadow {
   box-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
-}
+} */
 
-.sidebar {
+/* .sidebar {
   -webkit-animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-}
+} */
 
-@-webkit-keyframes slide-top {
+/* @-webkit-keyframes slide-top {
   0% {
     -webkit-transform: translateY(100px);
     transform: translateY(100px);
@@ -87,9 +87,9 @@
     -webkit-transform: translateY(0);
     transform: translateY(0);
   }
-}
+} */
 
-@keyframes slide-top {
+/* @keyframes slide-top {
   0% {
     -webkit-transform: translateY(100px);
     transform: translateY(100px);
@@ -99,36 +99,36 @@
     -webkit-transform: translateY(0);
     transform: translateY(0);
   }
-}
+} */
 
-.feature-card:hover {
+/* .feature-card:hover {
   background: var(--black-gradient);
   box-shadow: var(--card-shadow);
-}
+} */
 
-.feedback-container .feedback-card:last-child {
+/* .feedback-container .feedback-card:last-child {
   margin-right: 0px;
-}
+} */
 
-.feedback-card {
+/* .feedback-card {
   background: transparent;
-}
+} */
 
-.feedback-card:hover {
+/* .feedback-card:hover {
   background: var(--black-gradient);
-}
+} */
 
-.blue__gradient {
+/* .blue__gradient {
   background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%);
   filter: blur(123px);
-}
+} */
 
-.pink__gradient {
+/* .pink__gradient {
   background: linear-gradient(90deg, #f4c4f3 0%, #fc67fa 100%);
   filter: blur(900px);
-}
+} */
 
-.white__gradient {
+/* .white__gradient {
   background: rgba(255, 255, 255, 0.6);
   filter: blur(750px);
 } */
