--- a/src/index.css
+++ b/src/index.css
@@ -51,12 +51,12 @@
       #11101d 91.61%);
 } */
 
-/* .bg-black-gradient-2 {
+.bg-black-gradient-2 {
   background: linear-gradient(-168.39deg,
       #ffffff -278.56%,
       #6d6d6d -78.47%,
       #11101d 91.61%);
-} */
+}
 
 /* .bg-gray-gradient {
   background: linear-gradient(153.47deg,
@@ -68,9 +68,9 @@
   background: linear-gradient(125.17deg, #272727 0%, #11101d 100%);
 } */
 
-/* .box-shadow {
+.box-shadow {
   box-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
-} */
+}
 
 /* .sidebar {
   -webkit-animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
