--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,8 @@
       #11101d 91.61%);
   --card-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
   background-color: #11101d;
+  --toastify-toast-width: 620px;
+  --toastify-toast-height: 720px;
 }
 
 * {
@@ -64,9 +66,9 @@
       #14101d 95.11%);
 } */
 
-/* .bg-discount-gradient {
+.bg-discount-gradient {
   background: linear-gradient(125.17deg, #272727 0%, #11101d 100%);
-} */
+}
 
 .box-shadow {
   box-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
